--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "hci-calendar2",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
-  }
+    "name": "hci-calendar2",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "vite"
+    },
+    "dependencies": {
+        "next": "14.1.0",
+        "react": "^18",
+        "react-dom": "^18"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "@vitejs/plugin-react": "^4.2.1",
+        "eslint": "^8",
+        "eslint-config-next": "14.1.0",
+        "typescript": "^5",
+        "vite": "^5.0.12"
+    }
 }
