--- a/package.json
+++ b/package.json
@@ -6,9 +6,22 @@
         "dev": "vite"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.3",
+        "@emotion/styled": "^11.11.0",
+        "@mantine/core": "^7.5.1",
+        "@mantine/hooks": "^7.5.1",
+        "@supabase/supabase-js": "^2.39.3",
+        "@tabler/icons-react": "^2.46.0",
+        "immutability-helper": "^3.1.1",
+        "jotai": "^2.6.4",
+        "moment": "^2.30.1",
         "next": "14.1.0",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
+        "react-dom": "^18",
+        "react-rnd": "^10.4.1",
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
         "@types/node": "^20",
