--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@vitejs/plugin-react": "^4.2.1",
         "eslint": "^8",
         "eslint-config-next": "14.1.0",
+        "supabase": "^1.136.3",
         "typescript": "^5",
         "vite": "^5.0.12"
     }
