--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
         "@emotion/react": "^11.11.3",
         "@emotion/styled": "^11.11.0",
         "@mantine/core": "^7.5.1",
+        "@mantine/dates": "^7.5.1",
         "@mantine/hooks": "^7.5.1",
         "@supabase/supabase-js": "^2.39.3",
         "@tabler/icons-react": "^2.46.0",
+        "dayjs": "^1.11.10",
         "immutability-helper": "^3.1.1",
         "jotai": "^2.6.4",
         "moment": "^2.30.1",
