--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/uuid": "^9.0.8",
         "@vitejs/plugin-react": "^4.2.1",
         "eslint": "^8",
         "eslint-config-next": "14.1.0",
