--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^18",
         "react-rnd": "^10.4.1",
-        "uuid": "^9.0.1"
+        "uuid": "^9.0.1",
+        "zod": "^3.22.4"
     },
     "devDependencies": {
         "@types/node": "^20",
