--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dependencies": {
         "@emotion/react": "^11.11.3",
         "@emotion/styled": "^11.11.0",
+        "@fontsource-variable/roboto-mono": "^5.0.17",
         "@mantine/core": "^7.5.1",
         "@mantine/dates": "^7.5.1",
         "@mantine/hooks": "^7.5.1",
