Most modal styling done

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
         "@emotion/react": "^11.11.3",
         "@emotion/styled": "^11.11.0",
         "@fontsource-variable/roboto-mono": "^5.0.17",
+        "@fortawesome/fontawesome-svg-core": "^6.5.1",
+        "@fortawesome/free-brands-svg-icons": "^6.5.1",
+        "@fortawesome/free-solid-svg-icons": "^6.5.1",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "@mantine/core": "^7.5.1",
         "@mantine/dates": "^7.5.1",
         "@mantine/hooks": "^7.5.1",
