--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "jotai": "^2.6.4",
         "moment": "^2.30.1",
         "next": "14.1.0",
+        "pocketbase": "^0.21.1",
         "react": "^18",
         "react-dnd": "^16.0.1",
         "react-dnd-html5-backend": "^16.0.1",
