--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "@mantine/hooks": "^7.5.1",
         "@supabase/supabase-js": "^2.39.3",
         "@tabler/icons-react": "^2.46.0",
+        "@tanstack/react-router": "^1.16.6",
+        "@tanstack/router-devtools": "^1.16.6",
         "dayjs": "^1.11.10",
         "immutability-helper": "^3.1.1",
         "jotai": "^2.6.4",
@@ -39,6 +41,7 @@
         "zod": "^3.22.4"
     },
     "devDependencies": {
+        "@tanstack/router-vite-plugin": "^1.16.5",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
