--- a/package.json
+++ b/package.json
@@ -3,13 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "vite",
-        "supabase:start": "supabase start",
-        "supabase:stop": "supabase stop",
-        "supabase:pull": "supabase db pull",
-        "supabase:push": "supabase db push",
-        "supabase:reset": "supabase db reset",
-        "supabase:migrationUp": "supabase migrate up"
+        "dev": "vite"
     },
     "dependencies": {
         "@emotion/react": "^11.11.3",
@@ -22,7 +16,6 @@
         "@mantine/core": "^7.5.1",
         "@mantine/dates": "^7.5.1",
         "@mantine/hooks": "^7.5.1",
-        "@supabase/supabase-js": "^2.39.3",
         "@tabler/icons-react": "^2.46.0",
         "@tanstack/react-router": "^1.16.6",
         "@tanstack/router-devtools": "^1.16.6",
@@ -49,7 +42,6 @@
         "@vitejs/plugin-react": "^4.2.1",
         "eslint": "^8",
         "eslint-config-next": "14.1.0",
-        "supabase": "^1.136.3",
         "typescript": "^5",
         "vite": "^5.0.12"
     }
